# roofline-framework

./: .gitignore  README.md  energy_analysis_report.txt  pyproject.toml  requirements.txt  time_analysis_report.html  time_analysis_report.md  time_analysis_report.txt
examples/: alexnet_example.py  detect_hw_roofline.py  energy_efficiency_multi_model.py  multi_model_multi_hw.py  time_analysis_demo.py
notebooks/: demo.ipynb
roofline/: __init__.py  cli.py
roofline/core/: __init__.py  analyzer.py  flop_counter.py  layer_info.py  memory_estimator.py
roofline/hardware/: __init__.py  hw_database.py  hw_detector.py  hw_fetcher.py  hw_resolver.py  hw_spec.py
roofline/parsers/: __init__.py  base.py  folder_parser.py  huggingface_parser.py  onnx_parser.py  pytorch_parser.py  tensorflow_parser.py  zip_handler.py
roofline/reporting/: __init__.py  roofline_plot.py  table_report.py
tests/: test_flop_counter.py  test_memory_estimator.py  test_roofline.py
