[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "roofline"
version = "0.1.0"
description = "Layer-wise roofline analysis framework for deep learning models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Roofline Framework" }]
keywords = ["roofline", "deep-learning", "profiling", "arithmetic-intensity", "flops"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "rich>=13.0",
    "typer>=0.12",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
onnx = ["onnx>=1.14", "onnxruntime>=1.16"]
huggingface = ["transformers>=4.35", "safetensors>=0.4"]
tensorflow = ["tensorflow>=2.13"]
nvidia = ["pynvml>=11.5"]
notebook = ["jupyter>=1.0", "ipywidgets>=8.0"]
all = [
    "onnx>=1.14",
    "onnxruntime>=1.16",
    "transformers>=4.35",
    "safetensors>=0.4",
    "tensorflow>=2.13",
    "pynvml>=11.5",
    "jupyter>=1.0",
    "ipywidgets>=8.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
roofline = "roofline.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["roofline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
